# imna_file_manager

./: LICENSE  app.vue  bun.lockb  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
components/: DirectoryItem.vue  Sidebar.vue  pathView.vue
models/: DirectoryItem.ts
pages/index/: [...slug].vue
plugins/: virtualScroller.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
